--- a/download_page.html
+++ b/download_page.html
@@ -5,6 +5,7 @@
     </header>
     <body>
         <h2>Files in storage</h2>
+        This page lists all files in the storage directory. Download logs and scores of e.g. competitions
         <br>
         <ul>
         {% for file in files %}
